# stratlake-trade-engine

./: .env.example  .gitattributes  .gitignore  ASYMMETRY_IMPLEMENTATION_STATUS.md  ASYMMETRY_QUICK_START.md  CANDIDATE_DRIVEN_PORTFOLIO_IMPLEMENTATION.md  CANDIDATE_SELECTION_PATTERNS.md  CODEBASE_EXPLORATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY_ISSUE_1.md  LICENSE  README.md  STRATEGY_ARCHETYPE_ARCHITECTURE.md  STRATEGY_ARCHETYPE_COMPLETION_REPORT.md  STRATEGY_ARCHETYPE_IMPLEMENTATION.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
cli/: __init__.py  build_features.py
configs/: alpha_promotion_gates.yml  alphas.yml  alphas_2026_q1.yml  candidate_selection.yml  evaluation.yml  evaluation_2026_q1.yml  execution.yml  features.yml  portfolios.yml  portfolios_2026_q1.yml  portfolios_alpha_2026_q1.yml  research_campaign.yml  review.yml  review_gates_2026_q1.yml  robustness.yml  robustness_extended_example.yml  robustness_mean_reversion_2026_q1.yml  sanity.yml  strategies.yml  test_pipeline.yml  tickers_50.txt
contracts/: lineage.schema.json  pipeline_manifest.schema.json  pipeline_metrics.schema.json
docs/: alpha_evaluation_workflow.md  alpha_workflow.md  backfilled_2026_q1_alpha_workflow.md  backfilled_2026_q1_research_workflow.md  backtest_runner.md  baseline_strategies.md  cli_strategy_runner.md  dataset_qa_metrics.md  evaluation_split_configuration.md  execution_model.md  experiment_artifact_logging.md  extended_robustness_sweeps.md  feature_dataset_contract.md  feature_metadata_export.md  getting_started.md  (+55 more)
(+1169 files in other folders)
